--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
   --content-background: #fff;
   --search-item-value-color: #222;
   --search-item-hover-background: #dedede;
+  --form-border-color: #c3c3c3;
 }
 
 .dark-mode {
@@ -20,6 +21,7 @@
   --content-background: #464646;
   --search-item-value-color: #dadada;
   --search-item-hover-background: #222;
+  --form-border-color: #fff;
 }
 
 * {
