--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -386,6 +386,11 @@ button img {
     position: relative;
     z-index: 1;
     transition: transform 3s ease-in-out;
+
+    &--disabled {
+      object-fit: cover;
+      height: 100%;
+    }
   }
 
   &__details {
@@ -480,7 +485,15 @@ button img {
 
   &__description {
     font-size: 0.875em;
-
+    &--grid {
+      &.cropped {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+      }
+    }
   }
 }
 
