--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,13 +3,29 @@
     <form action="" class="search-form" [formGroup]="searchForm" autocomplete="off">
       <label for="search-text" class="hide-for-user">Search term</label>
       <input autofocus required type="search" id="search-text" class="search-form__input"
-             placeholder="eg. puppies" formControlName="searchText">
+             placeholder="eg. puppies" formControlName="searchText" (focusout)="focusOut($event.target.value)">
       <div class="search-form__select-wrapper">
         <label for="orientation" class="hide-for-user">Image orientation</label>
         <select class="search-form__select" name="orientation" id="orientation" formControlName="orientation">
           <option *ngFor="let opt of options" [value]="opt.value">{{opt.value}}</option>
         </select>
       </div>
+      <button (click)="toggleHistory($event)" title="Show history search" class="actions__button button button--no-border-radius" *ngIf="historyItems.length > 0">
+        <i class="actions__icon material-icons" aria-hidden="true" *ngIf="!showHistory">history</i>
+        <i class="actions__icon material-icons" aria-hidden="true" *ngIf="showHistory">close</i>
+      </button>
+      <div class="search-form__history search-history" *ngIf="showHistory">
+        <p class="search-history__title">Search history:</p>
+        <ul class="history-list search-history__list">
+          <ng-container *ngFor="let historyItem of historyItems; let index = index">
+            <li class="history-list__item" *ngIf="index < maxItemsInSearch && historyItem ">
+              <button class="history-list__item-name" (click)="changeFormValue(historyItem, $event)">{{ historyItem }}</button>
+            </li>
+          </ng-container>
+        </ul>
+        <a *ngIf="maxItemsInSearch < historyItems.length - 1" class="history-list__link" href="#" (click)="maxItemsInSearch = historyItems.length">Show all position in history ({{historyItems.length}})</a>
+      </div>
+
     </form>
 
     <ul class="actions">
@@ -48,7 +64,7 @@
         <div class="settings-form__group">
           <input type="checkbox" id="disable-images-animation" [(ngModel)]="disableImages"
                  [ngModelOptions]="{standalone: true}">
-          <label for="disable-images-animation">Disable thumbnails animation</label>
+          <label for="disable-images-animation">Disable thumbnails scale to fit in container</label>
         </div>
         <div class="settings-form__group">
           <input type="checkbox" id="crop-description" [(ngModel)]="croppedDescription"
