--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,6 +31,7 @@ $wide: 1680px;
   color: var(--font-color);
   background-color: var(--body-background-color);
   min-height: 100vh;
+  font-family: var(--font);
 
 }
 
