--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Open+Sans:400,600,700&display=swap&subset=latin-ext');
 
 :root {
   --body-background-color: #eceff1;
@@ -10,6 +10,8 @@
   --search-item-value-color: #222;
   --search-item-hover-background: #dedede;
   --form-border-color: #c3c3c3;
+  --font: 'Open Sans', sans-serif;;
+
 }
 
 .dark-mode {
@@ -22,6 +24,8 @@
   --search-item-value-color: #dadada;
   --search-item-hover-background: #222;
   --form-border-color: #fff;
+
+  --font: 'Montserrat', sans-serif;
 }
 
 * {
@@ -38,6 +42,5 @@ html {
 body {
   font-size: 16px;
   min-height: 100vh;
-  font-family: 'Montserrat', sans-serif;
   overflow-y: scroll;
 }
