--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,16 +60,16 @@
   <div class="advanced-options" *ngIf="advancedSettings">
     <div class="container">
       <span class="alert"> belows settings will  <strong>not</strong> be saved in local storage!</span>
-      <form action="" class="settings-form ">
+      <form action="" class="settings-form">
         <div class="settings-form__group">
-          <input type="checkbox" id="disable-images-animation" [(ngModel)]="disableImages"
+          <input class="settings-form__checkbox" type="checkbox" id="disable-images-animation" [(ngModel)]="disableImages"
                  [ngModelOptions]="{standalone: true}">
-          <label for="disable-images-animation">Disable thumbnails scale to fit in container</label>
+          <label class="settings-form__label" for="disable-images-animation">Disable thumbnails scale to fit in container</label>
         </div>
         <div class="settings-form__group">
-          <input type="checkbox" id="crop-description" [(ngModel)]="croppedDescription"
+          <input type="checkbox" class="settings-form__checkbox" id="crop-description" [(ngModel)]="croppedDescription"
                  [ngModelOptions]="{standalone: true}">
-          <label for="crop-description">Crop description after second line in grid view</label>
+          <label class="settings-form__label" for="crop-description">Crop description after second line in grid view</label>
         </div>
       </form>
     </div>
