--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,30 +1,4 @@
-$small: 567px;
-$medium: 768px;
-$desktop: 1160px;
-$wide: 1680px;
-
-@mixin res($breakpoint) {
-  @if $breakpoint == wide {
-    @media only screen and (min-width: $wide) {
-      @content;
-    }
-  }
-  @if $breakpoint == desktop {
-    @media only screen and (min-width: $desktop) {
-      @content;
-    }
-  }
-  @if $breakpoint == tab {
-    @media only screen and (min-width: $medium) {
-      @content;
-    }
-  }
-  @if $breakpoint == phone {
-    @media only screen and (min-width: $small) {
-      @content;
-    }
-  }
-}
+@import '../assets/mixins';
 
 :host {
   display: block;
@@ -33,8 +7,6 @@ $wide: 1680px;
   min-height: 100vh;
   font-family: var(--font);
 }
-
-
 
 .button {
   width: 40px;
@@ -146,31 +118,6 @@ $wide: 1680px;
     animation: rotate-animation 1.5s infinite normal;
     user-select: none;
   }
-}
-
-.container {
-  width: 1160px;
-  margin: auto;
-  max-width: 100%;
-
-  &--flex {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.toolbar {
-  background-color: var(--content-background);
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-
-  @include res(phone) {
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-  }
-
 }
 
 .statistic {
