--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,10 @@
   --search-item-value-color: #222;
   --search-item-hover-background: #dedede;
   --form-border-color: #c3c3c3;
-  --font: 'Open Sans', sans-serif;;
+  --icon-color: #757575;
+  --button-active-background-color: rgba(0, 0, 0, 0.2);
 
+  --font: 'Open Sans', sans-serif;
 }
 
 .dark-mode {
@@ -24,6 +26,8 @@
   --search-item-value-color: #dadada;
   --search-item-hover-background: #222;
   --form-border-color: #fff;
+  --icon-color: #fff;
+  --button-active-background-color: rgba(255, 255, 255, 0.2);
 
   --font: 'Montserrat', sans-serif;
 }
@@ -42,7 +46,6 @@ html {
 body {
   font-size: 16px;
   min-height: 100vh;
-  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
@@ -59,6 +62,54 @@ body {
 
 ::-webkit-scrollbar-thumb:window-inactive {
   background: rgba(0, 0, 0, 0.3);
+}
+
+.button {
+  width: 40px;
+  min-width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  border: 0;
+  overflow: hidden;
+  transition: background-color 0.2s ease-in-out;
+  border-radius: 50%;
+
+  i {
+    color: var(--icon-color);
+    transition: color 0.2s ease-in-out;
+  }
+  &:disabled {
+    opacity: 0.2;
+  }
+  &:not(:disabled) {
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      i {
+        color: var(--primary-color);
+      }
+
+      background-color: var(--button-active-background-color);
+    }
+
+    &:focus,
+    &:active {
+      border-color: var(--primary-color);
+    }
+  }
+
+  &--no-border-radius {
+    border-radius: 0;
+  }
+
+  i {
+    width: 24px;
+    transition: color 0.2s ease-in-out;
+  }
 }
 
 .container {
