--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -107,9 +107,15 @@
   display: flex;
   width: 100%;
   position: relative;
+  padding-left: 0.5rem;
+
+  @include res(tab) {
+    padding-left: 1rem;
+  }
 
   @include res(desktop) {
     width: 70%;
+    padding-left: 0;
   }
 
   &__input {
@@ -239,12 +245,6 @@
 
 .content {
   padding: 1rem;
-  height: calc(100vh - 53px);
-  overflow-y: scroll;
-
-  @include res(tab) {
-    height: calc(100vh - 94px);
-  }
 }
 
 .hide-for-user {
